--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -40,9 +40,9 @@
 		
 		
 		#popView{
-			height: 88vh;
+			height: 80vh;
 			width: 380px;
-			border-radius:10px 10px 0 0;
+			border-radius:0px 10px 0 0;
 			background-color: rgba(0, 0, 0, 0.6);
 			bottom: 0px;
 			position:absolute;
@@ -71,7 +71,7 @@
 			height: 40vh;
 			width: 100%;
 			border-radius:10px 10px 0 0;
-			background-color: rgba(0, 0, 0, 0.6);
+			background-color: rgba(255, 255, 255, 0.6);
 			bottom: 0px;
 			position:absolute;
 			z-index:2;
@@ -80,15 +80,20 @@
 			color: #FFFFFF;
 			text-align:center;
 		}
+		#openPanelBtn{
+			bottom: 75vh;
+			transform:translateY(50%);
+		}
 		}
 		
 		#openPanelBtn{
 			background-color: rgba(0, 0, 0, 0.6);
-			position: fixed;
+			position: absolute;
 			width: 40px;
 			height: 40px;
-			top: 60px;
-			right: 5vh;
+			line-height:40px;
+			bottom: 75vh;
+			left:0px;
 			border-radius: 99em;
 			z-index:5;  
 		}
@@ -192,13 +197,13 @@
 	</nav>
 		
 	<div id="openPanelBtn">
-		<p onclick="pop_onclick()" style="color: #FFFFFF; font-size: 45px; text-align: center; line-height: 25px;">⌂</p>
+		<p onclick="pop_onclick()" style="color: #FFFFFF; font-size: 40px; text-align: center; line-height: 40px;">↔</p>
 	</div>
 
 	<br>
 	<div id="popView" style="padding:10px 4px 0px 4px;">
-		<div id="setPanel" class="flow-yscroll"></div>
-		<div id="route_info" class="bg-light flow-yscroll"></div>
+		<div id="setPanel" class="flow-yscroll" style="z-index:5;"></div>
+		<div id="route_info" class="bg-secondary flow-yscroll" style="z-index:4;"></div>
 	</div>
 	
 	<!-- <div id="popView">
