--- a/templates/search.html
+++ b/templates/search.html
@@ -122,7 +122,10 @@
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark " style="background-color:rgba(0, 0, 0, 0.6);">
 	<div class="container">
 	<!-- Navbar content -->
-		
+		<!-- .navbar-toggler 漢堡式選單按鈕 -->
+			<button class="navbar-toggler mx-1 " type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
 		<a class="navbar-brand mx-auto" href="/">
 			<img src="{{ url_for('static', filename='images/icon01.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -130,11 +133,8 @@
 		</a>
 		
 		<div class="input-group">
-			<!-- .navbar-toggler 漢堡式選單按鈕 -->
-			<button class="navbar-toggler mx-1" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<input type="search" class="form-control mx-1" placeholder="Search" aria-label="Search" id='search' style="background-color:rgba(255, 255, 255, 0.3); color: #FFF;">
+			
+			<input type="search" class="form-control mx-1 my-1" placeholder="Search" aria-label="Search" id='search' style="background-color:rgba(255, 255, 255, 0.3); color: #FFF;">
 			<div class="input-group-append">
 				<button class="btn btn-secondary mx-1" type="submit" onclick="search_onlick()">search
 				<i class="fa fa-search"></i>
