--- a/templates/trip.html
+++ b/templates/trip.html
@@ -172,7 +172,7 @@
 				//var points = path.split(',');
 				//alert(path.length);
 				clearAllPin();
-				for(var i=0;i<num && i<path.length-2;i++){
+				for(var i=0;i<num && i<path.length;i++){
 					//pushPin(path[i][0],path[i][1]);
 					if(i>0)
 						//clearRoute(dirMan);
