--- a/templates/search.html
+++ b/templates/search.html
@@ -153,7 +153,7 @@
 					<a class="nav-link" href="/navigation">Navigation</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Trip</a>
+					<a class="nav-link" href="/paper">Trip</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/logout">logout</a>
