--- a/templates/trip.html
+++ b/templates/trip.html
@@ -219,12 +219,15 @@
 		</a>
 		
 			
-			<button class="btn btn-secondary mx-1" type="submit" onclick="drawPath()">Next Spot</button>
+
+			<button class="btn btn-secondary mx-1" type="submit" onclick="drawPath()">
+				Next Spot
+			</button>
 
 		
 
 		<div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-			<ul class="navbar-nav mr-auto">
+			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
 					<a class="nav-link" href="/about">About</a>
 				</li>
@@ -232,7 +235,7 @@
 					<a class="nav-link" href="/navigation">Navigation</a>
 				</li>
 				<li class="nav-item font-weight-bold">
-					<a class="nav-link text-primary" href="#">Trip</a>
+					<a class="nav-link text-primary" href="/paper">Trip</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/logout">logout</a>
