--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -182,10 +182,10 @@
 					<a class="nav-link" href="/about">About</a>
 				</li>
 				<li class="nav-item font-weight-bold">
-					<a class="nav-link text-primary" href="#">Navigation</a>
+					<a class="nav-link text-primary" href="/navigation">Navigation</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Trip</a>
+					<a class="nav-link" href="/paper">Trip</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/logout">logout</a>
