--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PaiYaCHu</title>
+		<title>PaiYaCHu-About</title>
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -43,7 +43,7 @@
 								<a class="nav-link" href="/paper">Trip</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="/logout">logout</a>
+								<a class="nav-link" href="/login">Login</a>
 							</li>
 						</ul>
 					</div>
