--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Note</title>
+	<title>PaiYaCHu-Search</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<meta name="viewport" content = "width=device-width, initial-scale=1.0">
@@ -156,7 +156,7 @@
 					<a class="nav-link" href="/paper">Trip</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/logout">logout</a>
+					<a class="nav-link" href="/login">Login</a>
 				</li>
 			</ul>
 		</div>
