--- a/templates/trip.html
+++ b/templates/trip.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Note</title>
+	<title>PaiYaCHu-Trip</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<meta name="viewport" content = "width=device-width, initial-scale=1.0">
@@ -196,11 +196,8 @@
 			}
 
 	</script>
-<<<<<<< HEAD
 	<script src="{{ url_for('static', filename='assets/js/mapControl.js') }}"></script>
-=======
-	<!--script src="{{ url_for('static', filename='assets/js/mapControl.js') }}"></script-->
->>>>>>> dadcea175b773313f797a87a66cdd6c325e84f3e
+
 </head>
 
 <body onload='loadMapScenario();'>
@@ -238,7 +235,7 @@
 					<a class="nav-link text-primary" href="/paper">Trip</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/logout">logout</a>
+					<a class="nav-link" href="/login">Login</a>
 				</li>
 			</ul>
 		</div>
