--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -188,7 +188,7 @@
 					<a class="nav-link" href="/paper">Trip</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/login">Login</a>
+					<a class="nav-link" href="/logout">logout</a>
 				</li>
 			</ul>
 		</div>
