--- a/templates/search.html
+++ b/templates/search.html
@@ -53,6 +53,17 @@
 			text-align:center; 
 		}
 		
+		#openPanelBtn{
+			background-color: rgba(0, 0, 0, 0.6);
+			position: fixed;
+			width: 40px;
+			height: 40px;
+			line-height:40px;
+			bottom: 40px;
+			right: 40px;
+			border-radius: 99em;
+			z-index:5;  
+		}
 		
 		.flow-yscroll{
 			left: 50%;
@@ -115,6 +126,7 @@
 				});
 			}
 	</script>
+	<script src="{{ url_for('static', filename='assets/js/mapControl.js') }}"></script>
 </head>
 
 <body onload='loadMapScenario();'>
