--- a/templates/search.html
+++ b/templates/search.html
@@ -125,6 +125,16 @@
 					directionsManager.showInputPanel('setPanel');
 				});
 			}
+		
+			var viewRoad = true;
+			function changeViewMode(){
+				if(viewRoad){
+					setMapAerial();
+				}else{
+					setMapRoad();
+				}
+				viewRoad = !viewRoad;
+			}
 	</script>
 	<script src="{{ url_for('static', filename='assets/js/mapControl.js') }}"></script>
 </head>
@@ -175,6 +185,9 @@
 	</div>
 	</nav>
 	
+	<div id="openPanelBtn">
+		<p onclick="changeViewMode()" style="color: #FFFFFF; font-size: 40px; text-align: center; line-height: 40px;">+</p>
+	</div>
 
 	<br>
 	<div id="popView">
