--- a/templates/trip.html
+++ b/templates/trip.html
@@ -175,7 +175,7 @@
 				for(var i=0;i<num && i<path.length;i++){
 					//pushPin(path[i][0],path[i][1]);
 					if(i>0)
-						//clearRoute(dirMan);
+						//clearRoute();
 						searchRouteCode(add[i-1],add[i],path[i-1][0],path[i-1][1],path[i][0],path[i][1]);
 
 					clearAllPin();
